@@ -1,3 +1,9 @@
+1999-06-19  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
+
+	* converter.c: added a button to fetch the value under the
+	cursor into converter.
+	* gtkhex.c (gtk_hex_set_group_type): hide & show cursor.
+
 1999-04-28  Ettore Perazzoli  <ettore@comm2000.it>
 
 	* ghex.desktop: Added Italian translation.
